@- Fixed bug #22386 (Using browscap causes segfault). This fix @  also adds an optional bool argument to get_browser() that @  makes the return value an array instead of an object. (jay)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@120274 c90b9560-bf6c-de11-be94-00142212c4b1